--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
   <head>
     <title>hello vero dai<title>
   </head>
-  <body>hello vero dai</body>
+  <body>
+    <p>hello vero dai</p>
+  </body>
 </html>
