--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>hello vero dai<title>
+    <title>hello vero dai</title>
   </head>
   <body>
     <p>hello vero dai</p>
