update hello msg

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>hello vero dai</title>
+    <title>hello world</title>
   </head>
   <body>
-    <p>hello vero dai</p>
+    <p>hello linxiulei</p>
   </body>
 </html>
